[project]
name = "nimble"
version = "0.1.0"
description = ""
authors = [
    {name = "Zihao Zhou",email = "ziz244@ucsd.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nimblephysics (==0.10.52.1)",
    "numpy (==1.22.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
